--- a/assets/design.css
+++ b/assets/design.css
@@ -16,27 +16,35 @@
   } 
 
   img {
+
     height: 30px;
     width: 25px;
   }
-  
-h4 {
+
+h3 {
+
+    float: right;
+}  
+
+.h4 {
+
     color: #6558f5;
     float: right;
     font-size: 30px;
+    margin-left: 50px;
 }  
   .row {
     margin: 0px;
-    /* border: 1px solid green; */
+    display: flex;
   }
   
   #aside {
+
     padding: 20px 30px 20px 5px;
     float: left;
     border-right: 2px solid lightgray;
     border-radius: 0px;
     background-color: #f7f9fa;
-    /* border: 3px solid red; */
   }
   
   #ul-aside {
@@ -44,6 +52,7 @@ h4 {
   }
   
   .list-group-item {
+
     margin: 30px 0px 0px 0px;
     font-size: 30px;
     border: none;
@@ -56,8 +65,8 @@ h4 {
     background-color: #f7f9fa;
   }
   
+ 
   #div-perfil {
-    /* border: 3px solid green; */
     padding: 37px 50px 0px 50px;
   }
   
@@ -69,7 +78,6 @@ h4 {
   }
   
   #col-perfil {
-    /* border: 1px solid purple; */
     display: flex;
     float: left;
     align-items: center;
@@ -108,11 +116,21 @@ h4 {
     padding: 53px 0px 53px 0px;
   }
   
-  #btn-limpar {
+  .btn-limpar {
     background-color: #c3cfd9;
     color: #3c4b57;
+    font-size: 25px;
+    border-radius: 4px;
+    border: 2px;
   }
   
-  #btn-salvar {
-    background-color: #2c88d9;
-  }
+  .btn-salvar {
+    background-color: #1542d8;
+    display: flex;
+    margin-left: 90%;
+    font-size: 25px;
+    border-radius: 4px;
+    border: 2px;
+    margin-top: -30px;
+}
+
